--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Dating-Apps-Dashboard",
+  "name": "zac-map-dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
